JS criado e salvando a div

--- a/6.1_HTML&CSS-Forms/styles.css
+++ b/6.1_HTML&CSS-Forms/styles.css
@@ -8,10 +8,14 @@ textarea {
 
 body {
     text-align: center;
-    margin-left: 500px;
-    margin-right: 500px;
+    margin-left: 400px;
+    margin-right: 400px;
 }
 
-div {
-    margin: 10px
+div#print{
+    border: 1px solid black;
+    width: 550px;
+    height: auto;
+    margin: 10px;
+    text-align: center;
 }
