--- a/6.2_Bibliotecas_JavaScript_e_Frameworks_CSS/exercises/6_2/styles.css
+++ b/6.2_Bibliotecas_JavaScript_e_Frameworks_CSS/exercises/6_2/styles.css
@@ -6,16 +6,20 @@ textarea {
     resize: none;
 }
 
+div {
+    max-width: 400px;
+}
+
 body {
+    max-width: 600px;
     text-align: center;
-    margin-left: 400px;
-    margin-right: 400px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 div#print{
     border: 1px solid black;
-    width: 550px;
-    height: auto;
-    margin: 10px;
     text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
