--- a/6.2_Bibliotecas_JavaScript_e_Frameworks_CSS/exercises/6_2/css/styles.css
+++ b/6.2_Bibliotecas_JavaScript_e_Frameworks_CSS/exercises/6_2/css/styles.css
@@ -11,15 +11,14 @@ div {
 }
 
 body {
-    max-width: 600px;
+    display: flex;
+    align-items: center;
+    flex-flow: column wrap;
     text-align: center;
-    margin-left: auto;
-    margin-right: auto;
+    
 }
 
 div#print{
     border: 1px solid black;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
+    max-width: 600px;
 }
