--- a/6.5CSS_Responsivo-Mobile_First/exercises/6.5/exercise1.css
+++ b/6.5CSS_Responsivo-Mobile_First/exercises/6.5/exercise1.css
@@ -4,3 +4,67 @@
     padding: 0;
     border: 0;
 }
+
+body {
+    font-size: 1.2em;
+    margin: 0;
+    text-align: justify;
+}
+h1 {
+    font-size: 1.5em;
+    text-align: center;
+    margin: 20px;
+}
+h2 {
+    text-align: center;
+    margin: 20px;
+}
+
+img {
+    max-width: 100%;
+}
+
+figure {
+    margin: 10px;
+}
+
+.img-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+@media (max-width: 500px) {
+    .content-container {
+        margin: 0 2%;
+        font-size: 1.5rem;
+        line-height: 1.5;
+        background-color: red;
+    }
+}
+
+@media (min-width: 500px) and (max-width: 800px) {
+    .content-container {
+        margin: 0 5%;
+        font-size: 1.4rem;
+        line-height: 1.25;
+        background-color: yellow;
+    }
+}
+
+@media (min-width: 800px) and (max-width: 1100px) {
+    .content-container {
+        margin: 0 10%;
+        font-size: 1.3rem;
+        line-height: 1.1;
+        background-color: green;
+    }
+}
+
+@media (min-width: 1100px) {
+    .content-container {
+        margin: 0 15%;
+        line-height: 1;
+        background-color: blue;
+    }
+}
