--- a/6.5CSS_Responsivo-Mobile_First/exercises/6.5/exercise2.css
+++ b/6.5CSS_Responsivo-Mobile_First/exercises/6.5/exercise2.css
@@ -56,25 +56,32 @@ aside ul {
 }
 
 @media screen and (min-width: 360px) and (max-width: 768px) {
-    .container{
+    .container {
         width: 85%;
         margin: auto;
         justify-content: center;
-        line-height: 1.3;
+        line-height: 1.5;
+    }
+
+    h1 {
+        font-size: 2.5em;
     }
 
     .nav{
-        font-size: 1.3em;
+        font-size: 2em;
 
     }
     .aside-one {
-        font-size: 1.3em;
+        font-size: 1.4em;
+        text-align: center;
+        
     }
-    .aside-two{
-        font-size: 1.3em;
+    .aside-two {
+        font-size: 1.4em;
+        text-align: center;
     }
     .main-content {
-        font-size: 1.3em;
+        font-size: 1.4em;
         text-align: justify;
     }
     .footer {
