ajustes exercício pokedex módulo 11.2

--- a/11.2_Componentes_React/exercises/11_2/my-pokedex/src/App.css
+++ b/11.2_Componentes_React/exercises/11_2/my-pokedex/src/App.css
@@ -2,7 +2,7 @@
     text-align: center;
   }
 
-.Pokemons {
+.pokemon {
   border: 1px solid black;
   border-radius: 10%;
   background-color: whitesmoke;
