--- a/13.2_React_Router/exercises/13_2/exercise-router-fixation/src/App.css
+++ b/13.2_React_Router/exercises/13_2/exercise-router-fixation/src/App.css
@@ -1,38 +1,23 @@
-.App {
-  text-align: center;
+body {
+  background-color: whitesmoke;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: row;
+  justify-content: space-around;
+  padding: 30px;
+  background-color: #0fa36b;
 }
 
-.App-link {
-  color: #61dafb;
+a {
+  text-decoration: none;
+  font-size: 20px;
+  color: whitesmoke;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.main-content {
+  margin: 50px 150px;
+  font-size: 20px;
+  text-align: center;
 }
