--- a/15.3_Testando_React_Router/exercise-portfolio-web/src/css/Content.css
+++ b/15.3_Testando_React_Router/exercise-portfolio-web/src/css/Content.css
@@ -14,3 +14,29 @@
     display: flex;
     flex-direction: row;
 }
+
+.about-container {
+    border: 3px solid rgb(255, 255, 255);
+    padding: 20px 40px 40px;
+    max-width: 1000px;
+    background: whitesmoke;
+    color: black;
+}
+
+.about-image {
+    width: 350px;
+    margin: 30px 30px 30px 0;
+    float: left;
+    border-radius: 50%;
+}
+.about-text {
+    display: inline;
+}
+
+.projects-container {
+    border: 3px solid rgb(255, 255, 255);
+    padding: 20px 40px 40px;
+    max-width: 1000px;
+    background: whitesmoke;
+    color: black;
+}
