--- a/16.4_Redux_no_React_Actions_Assíncronas/exercise-game-of-thrones-characters/src/components/SearchForm.css
+++ b/16.4_Redux_no_React_Actions_Assíncronas/exercise-game-of-thrones-characters/src/components/SearchForm.css
@@ -1,7 +1,18 @@
+body, html {
+  height: 100%;
+}
+
+body {
+  background-image: url(../images/background.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100%;
+}
+
 .submitButton {
-  width: 100px;
-  height: 50px;
-  background-color: #2c59ab;
+  width: 80px;
+  height: 30px;
+  background-color: #013806;
   color: white;
   font-size: 1.2rem;
 }
@@ -9,3 +20,30 @@
 .buttonSection {
   margin-top: 1rem;
 }
+
+.App {
+  max-width: 300px;
+}
+
+.search {
+  margin-top: 100px;
+  text-align: center;
+}
+
+.result ul {
+  font-size: 1.3em;
+  font-weight: 900;
+  list-style-type: none;
+  padding: 0;
+  text-align: center;
+}
+
+.result li { 
+  font-size: 1em;
+  color: #331C0E;
+}
+
+input {
+  background-color:  #FCFEF0;
+}
+
