--- a/16.4_Redux_no_React_Actions_Assíncronas/exercise-game-of-thrones-characters/src/components/SearchForm.css
+++ b/16.4_Redux_no_React_Actions_Assíncronas/exercise-game-of-thrones-characters/src/components/SearchForm.css
@@ -26,12 +26,11 @@ body {
 }
 
 .search {
-  margin-top: 100px;
   text-align: center;
 }
 
 .result ul {
-  font-size: 1.3em;
+  font-size: 1em;
   font-weight: 900;
   list-style-type: none;
   padding: 0;
@@ -47,3 +46,6 @@ input {
   background-color:  #FCFEF0;
 }
 
+h1 { 
+  font-size: 1.5em;
+}
